--- a/eNMS/templates/base_site.html
+++ b/eNMS/templates/base_site.html
@@ -294,7 +294,7 @@
       const relationships = {{ relationships|tojson|safe }};
       const serviceTypes = {{ service_types|tojson|safe }};
       const tableProperties = {{ table_properties|tojson|safe }};
-      const theme = {{ themes|tojson|safe }}.themes?.[user.theme];
+      const theme = {{ themes|tojson|safe }}.themes?.["default"];
       const visualization = {{ visualization|tojson|safe }};
       let action = {};
       let settings = {{ settings|tojson|safe }};
