--- a/eNMS/templates/base_site.html
+++ b/eNMS/templates/base_site.html
@@ -77,7 +77,7 @@
     />
     <link href="{{ url_for('static', filename='css/main.css') }}" rel="stylesheet" />
     <link
-      href="{{ url_for('static', filename='css/themes/{}.css'.format(current_user.theme)) }}"
+      href="{{ url_for('static', filename='css/themes/default.css') }}"
       rel="stylesheet"
     />
     {% endblock stylesheets %} {% endblock head %}
